<resources>
    <string name="app_name">nCov Health Tracker</string>
    <string name="server_client_id">714385865679-a3nb08gljl41ni51mda61vphcdsfb7hd.apps.googleusercontent.com</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="country">Philippines</string>

    <string name="google">Google</string>
    <string name="facebook">Facebook</string>

    <string name="google_login">LOGIN WITH GOOGLE</string>
    <string name="facebook_login">LOGIN WITH FACEBOOK</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="homepage">Homepage </string>
    <string name="infection">Infection</string>
    <string name="journal">Journal</string>
    <string name="vaccine">Vaccine</string>
    <string name="travel">Travel</string>
</resources>
